<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TitleBar="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.voiddog.mblog.ui.TitleBar_
        android:id="@+id/title_bar"
        TitleBar:leftIcon="fa-arrow-left"
        TitleBar:titleText="Register"
        TitleBar:rightText="Go"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"/>

    <EditText
        android:id="@+id/et_email"
        style="@style/RegisterEditText"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_text_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/et_password"
        style="@style/LoginEditText"
        android:inputType="textPassword"
        android:hint="@string/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_password_retry"
        style="@style/LoginEditText"
        android:inputType="textPassword"
        android:hint="@string/edit_text_retry_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>